--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
-	"appid": "wxca97160920c9d448",
+	"appid": "Wx84bcefd12377ba30",
 	"projectname": "sock-monster-airbnb-wechat",
 	"debugOptions": {
 		"hidedInDevtools": []
