--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/show/show",
     "pages/new/new",
-    "pages/edit/edit"
+    "pages/edit/edit",
+    "pages/add/add"
   ],
   "window":{
     "backgroundTextStyle":"light",
