--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -53,11 +53,18 @@
 				{
 					"id": -1,
 					"name": "Create A Machine Page",
-					"pathName": "pages/new/new"
-          },
-        {
-          "id": -1,
+					"pathName": "pages/new/new",
+					"query": ""
+				},
+				{
+					"id": -1,
 					"name": "main",
+					"pathName": "pages/main/main",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "Main",
 					"pathName": "pages/main/main"
 				}
 			]
