--- a/app.json
+++ b/app.json
@@ -42,12 +42,6 @@
     "request": 10000,
     "downloadFile": 10000
   },
-  "debug": true,
-
-  "plugins": {
-    "calendar": {
-      "version": "1.1.3",
-      "provider": "wx92c68dae5a8bb046"
-    }
-  }
+  "debug": true
+  
 }
