--- a/project.config.json
+++ b/project.config.json
@@ -36,8 +36,14 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "profile",
+					"pathName": "pages/profile/profile"
+				}
+			]
 		}
 	}
 }
