fixed the avatar size

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#1D3557",
+    "navigationBarBackgroundColor": "#092851",
     "navigationBarTitleText": "Sock Monster",
     "navigationBarTextStyle":"white"
 
