--- a/project.config.json
+++ b/project.config.json
@@ -36,16 +36,13 @@
 			"list": []
 		},
 		"miniprogram": {
-
-			"current": 0,
-
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "profile",
-
-					"pathName": "pages/profile/profile"
-
+					"pathName": "pages/profile/profile",
+					"query": ""
 				}
 			]
 		}
