--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/new/new",
     "pages/edit/edit",
     "pages/main/main",
-    "pages/profile/profile"
+    "pages/profile/profile",
+    "pages/booking/booking"
 
   ],
   "window":{
