making the photo hosting works on Tencent Cloud

--- a/project.config.json
+++ b/project.config.json
@@ -36,16 +36,24 @@
 			"list": []
 		},
 		"miniprogram": {
-
-			"current": 0,
-
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
 					"name": "profile",
-
+					"pathName": "pages/profile/profile",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "New",
+					"pathName": "pages/new/new",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "profile",
 					"pathName": "pages/profile/profile"
-
 				}
 			]
 		}
