--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -59,7 +59,13 @@
 				{
 					"id": -1,
 					"name": "booking",
-					"pathName": "pages/booking/booking"
+					"pathName": "pages/booking/booking",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "Show",
+					"pathName": "pages/show/show"
 				}
 			]
 		}
