--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/edit/edit",
     "pages/main/main",
     "pages/profile/profile",
-    "pages/booking/booking"
+    "pages/booking/booking",
+    "pages/request/request"
 
   ],
   "window":{
